syntax = "proto3";

package com.example.generated;
option java_package = "com.example.generated";
option java_multiple_files = true;

message PinRequest {
  uint64 user_id = 1;
  uint64 location_id = 2;
}

message UnpinRequest {
  uint64 user_id = 1;
  uint64 location_id = 2;
}

message PinResponse {
  string message = 1;
}

message UnPinResponse {
  string message = 1;
}

message GetRelatedLocationsRequest {
  uint64 user_id = 1;
}

message GetRelatedLocationsResponse {
  repeated uint64 locations = 1;
}

message GetRelatedUsersRequest {
  uint64 location_id = 1;
}

message GetRelatedUsersResponse {
  repeated uint64 users = 1;
}

service UserLocation {
  rpc pin(PinRequest) returns (PinResponse);

  rpc unpin(UnpinRequest) returns (UnPinResponse);

  rpc getRelatedLocations(GetRelatedLocationsRequest)
      returns (GetRelatedLocationsResponse);

  rpc getRelatedUsers(GetRelatedUsersRequest)
      returns (GetRelatedUsersResponse);
}

